WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249449
ASSERTION FAILED in ~GraphicsContextGLTextureMapperANGLE
https://bugs.webkit.org/show_bug.cgi?id=249449
Summary
ASSERTION FAILED in ~GraphicsContextGLTextureMapperANGLE
Fujii Hironori
Reported
2022-12-15 21:54:10 PST
WebKitGPUProcess.exe of WinCairo WK2 Debug is crashing for webgl/webgl-fail-platform-context-creation-no-crash.html ASSERTION FAILED: success C:\jenkins_slave\wincairo-main\Source\WebCore\platform\graphics\texmap\GraphicsContextGLTextureMapperANGLE.cpp(125) : WebCore::GraphicsContextGLTextureMapperANGLE::~GraphicsContextGLTextureMapperANGLE 1 00007FFA7476248B WTFCrash 2 00007FFA2F2ADA5E WTFCrashWithInfo 3 00007FFA2F484458 WebCore::GraphicsContextGLTextureMapperANGLE::~GraphicsContextGLTextureMapperANGLE 4 00007FFA2F48783A WebCore::GraphicsContextGLTextureMapperANGLE::`vector deleting destructor' 5 00007FFA2F487640 std::default_delete<WebCore::GraphicsContextGL>::operator() 6 00007FFA2F487E0B WTF::RefCounted<WebCore::GraphicsContextGL,std::default_delete<WebCore::GraphicsContextGL> >::deref 7 00007FFA2F4872A3 WTF::Ref<WebCore::GraphicsContextGLTextureMapperANGLE,WTF::RawPtrTraits<WebCore::GraphicsContextGLTextureMapperANGLE> >::~Ref<WebCore::GraphicsContextGLTextureMapperANGLE,WTF::RawPtrTraits<WebCore::GraphicsContextGLTextureMapperANGLE> > 8 00007FFA2F484387 WebCore::GraphicsContextGLTextureMapperANGLE::create 9 00007FFA41E612A7 WebKit::RemoteGraphicsContextGLWC::platformWorkQueueInitialize 10 00007FFA42997F25 WebKit::RemoteGraphicsContextGL::workQueueInitialize 11 00007FFA4299DC01 `WebKit::RemoteGraphicsContextGL::initialize'::`2'::<lambda_1>::operator() 12 00007FFA429A156B WTF::Detail::CallableWrapper<`WebKit::RemoteGraphicsContextGL::initialize'::`2'::<lambda_1>,void>::call 13 00007FFA41EDBFA4 WTF::Function<void __cdecl(void)>::operator() 14 00007FFA42E8AD18 IPC::StreamConnectionWorkQueue::processStreams 15 00007FFA42E8AFA5 `IPC::StreamConnectionWorkQueue::startProcessingThread'::`2'::<lambda_1>::operator() 16 00007FFA42E8B4DB WTF::Detail::CallableWrapper<`IPC::StreamConnectionWorkQueue::startProcessingThread'::`2'::<lambda_1>,void>::call 17 00007FFA7477A473 WTF::Function<void __cdecl(void)>::operator() 18 00007FFA74820A58 WTF::Thread::entryPoint 19 00007FFA748FCD24 WTF::wtfThreadEntryPoint 20 00007FFA99D51BB2 configthreadlocale 21 00007FFA9ACD7614 BaseThreadInitThunk 22 00007FFA9C4C26A1 RtlUserThreadStart
Attachments
Patch
(2.00 KB, patch)
2022-12-15 22:23 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2022-12-15 22:01:50 PST
The test case was added by
257843@main
(
bug#249214
).
Fujii Hironori
Comment 2
2022-12-15 22:23:11 PST
Created
attachment 464067
[details]
Patch
Fujii Hironori
Comment 3
2022-12-15 22:33:58 PST
Cocoa port checks the return value there.
https://github.com/WebKit/WebKit/blob/24540c7a6767717f61a5423cbf468b162bd1b88a/Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm#L464
EWS
Comment 4
2022-12-16 15:06:20 PST
Committed
258021@main
(9de68063d5f0): <
https://commits.webkit.org/258021@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464067
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-12-16 15:07:18 PST
<
rdar://problem/103462049
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug