ASSERTION FAILED in ~GraphicsContextGLTextureMapperANGLE https://bugs.webkit.org/show_bug.cgi?id=249449

Reviewed by Kimmo Kinnunen.

WinCairo WK2 Debug was reporting an assertion failure for
webgl/webgl-fail-platform-context-creation-no-crash.html. The
assertion assumed makeContextCurrent() always succeeded. But, it's not
true. It should check the return value like Cocoa port does.

* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:
(WebCore::GraphicsContextGLANGLE::~GraphicsContextGLANGLE):
(WebCore::GraphicsContextGLTextureMapperANGLE::~GraphicsContextGLTextureMapperANGLE):

Canonical link: https://commits.webkit.org/258021@main